--- a/radial.css
+++ b/radial.css
@@ -2,19 +2,22 @@
 body{
   margin:0;
   background: white;
+  max-width: 1920px;
+  min-width: 320px;
 }
 .slider{
   position:absolute;
   width:100%;
-  height:600px;
+  height: clamp(300px, 41.6vw, 800px);
   overflow:hidden;
-  background: white;
+   background: rgb(255, 201, 201);
 }
 .container{
   position:absolute;
   left:50%;
   cursor:grab;
- 
+   
+
 }
 .container:active{
   cursor:grabbing;
@@ -26,14 +29,17 @@ body{
   opacity: 0;
   pointer-events: none;
 }
+.card.center {
+  z-index: 10;  /* 중앙 카드를 제일 앞으로 */
+}
 .slide{
-  width:200px;
-  height:300px;
+  width: clamp(115px, 11.98vw, 200px);
+  aspect-ratio: 20 / 30;
   position:absolute;
   transform: translatex(-50%);
   bottom:0px;
   user-select:none;
-  border-radius: 12px;
+  border-radius: clamp(6px, 0.625vw, 12px);
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0,0,0,0.3);
 }
