--- a/slide-2/index.css
+++ b/slide-2/index.css
@@ -26,8 +26,8 @@ body {
     
   background-position: center;
   background-size: cover;
-  width: clamp(300px, 41.6vw, 800px);
-  height: 400px;
+  width: 638px;
+  height: 384px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,7 +124,7 @@ body {
 
   .swiper-slide {
     width: 90%;
-    height: 350px;
+    height: 384px;
   }
 
   .scroll-indicator {
