--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,8 @@ align-items: end;
 margin: 0 auto;
 width: 83%;
 }
+
+.plus_icon_btn{
+    display: flex; flex-wrap: wrap; gap:6px; text-align: center;
+    font-size: 19px; letter-spacing: -1px; font-weight: 700; color: #E3000B;
+}
