--- a/css/index.css
+++ b/css/index.css
@@ -25,8 +25,16 @@
   box-shadow: inset 2px 2px 0 rgba(255, 255, 255, 0.3);
   border-radius: 50px;
   backdrop-filter: blur(10px);
-  align-items: center;
+  align-items: center; 
+  transition: top 0.5s ease-in-out, opacity 1s ease ;
+  opacity: 1;
 }
+
+.nav-up {
+  top: -120px;
+  opacity: 0;
+}
+
 
 .left_gnb ul {
   display: flex;
