--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
   flex-direction: column;
 }
 
-.header {
+header {
   position: fixed;
   max-width: 1808px;
   top: 0;
@@ -36,12 +36,12 @@
 }
 
 
-.left_gnb ul {
+.gnb ul {
   display: flex;
   flex-wrap: wrap;
 }
 
-.left_gnb ul li a {
+.gnb ul li a {
   display: block;
   padding: 0 20px;
   height: 23px;
@@ -84,17 +84,7 @@
   flex-wrap: wrap;
   flex-direction: column;
 }
-.banner_title_wrap{
-  opacity: 0;
-  transform: translateY(20px);
-  filter: blur(6px);
-}
-.banner_title_wrap {
-  opacity: 1;
-  transform: translateY(0);
-  filter: blur(0);
-  transition: all 0.8s ease;
-}
+
 
 .banner_title_wrap p:first-child {
   font-family: "Rubik", sans-serif;
@@ -115,9 +105,8 @@
 
 .section_banner > img {
   position: absolute;
-  left: 48%;
+  left: 23%;
   bottom: 0;
-  transform: translate(-50%, 0);
   max-width: 50%;
   height: auto;
 }
@@ -240,10 +229,10 @@
 
 .swiper {
   width: 83%;
-  height: 728px;
+  height: 700px;
   padding-left: 50px;
   padding-right: 50px;
-  overflow: hidden;
+  overflow: hidden; 
 }
 
 .swiper-slide {
@@ -266,19 +255,19 @@
 
 .swiper-slide-prev,
 .swiper-slide-next {
-
+height: 136px;
   perspective: 1000px;
    transition: all 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
   
 }
 .swiper-slide-next img {
-  transform: perspective(1000px) rotateX(15deg);
+  transform: perspective(1000px) rotateX(-15deg);
   transform-style: preserve-3d;
    transition: all 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
  
 }
 .swiper-slide-prev img {
-  transform: perspective(1000px) rotateX(-15deg);
+  transform: perspective(1000px) rotateX(15deg);
   transform-style: preserve-3d;
    transition: all 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
   
