--- a/css/index.css
+++ b/css/index.css
@@ -211,6 +211,10 @@ header {
   align-items: center;
   background: #fff;
 }
+.no-scroll {
+  overflow: hidden;
+  height: 100%; /* 모바일에서 추가 스크롤 방지 */
+}
 
 .section_title_wrap {
   text-align: center;
@@ -255,30 +259,27 @@ header {
 
 .swiper-slide-prev,
 .swiper-slide-next {
-height: 136px;
+/* height: 136px; */
   perspective: 1000px;
-   transition: all 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
-  
+  transition: all 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
+  height: 136px !important;
+
 }
 .swiper-slide-next img {
-  transform: perspective(1000px) rotateX(-15deg);
+  transform: perspective(1000px) rotateX(15deg);
   transform-style: preserve-3d;
-   transition: all 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
+
+
  
 }
 .swiper-slide-prev img {
-  transform: perspective(1000px) rotateX(15deg);
+  transform: perspective(1000px) rotateX(-15deg);
   transform-style: preserve-3d;
-   transition: all 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
+
   
 }
 
 .swiper-slide-active {
   opacity: 1;
-   
-  
-}
-
-.swiper-slide-active img {
-  transform: perspective(1000px) rotateX(0deg);
+  height: 384px !important;
 }
