--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,76 @@ margin: 0 auto;
 width: 83%;
 }
 
+
+
+
+
+/* plus_btn */
 .plus_icon_btn{
     display: flex; flex-wrap: wrap; gap:6px; text-align: center;
     font-size: 19px; letter-spacing: -1px; font-weight: 700; color: #E3000B;
 }
+
+/* circle_btn */
+.circle_btn {
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+    gap: 8px;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+    width: 139px;
+  height: 32px;
+  text-align: center;
+  line-height: 32px;
+}
+
+.circle_btn .icon{
+    width: 32px;
+    height: 32px;
+    display: flex; flex-wrap: wrap; align-items: center; justify-content: center;
+    background: #E3000B;
+    border-radius: 32px;
+    color: #f2f2f2;
+    transition: 0.6s;
+}
+
+
+.circle_btn .fa-arrow-right{position: absolute; opacity: 0; left: 0;}
+
+.circle_btn:hover .icon{   
+    width: 100%;
+    transition: 0.6s;
+}
+
+.circle_btn:hover .icon .fa-arrow-right{   
+    opacity: 1;
+    transform: translateX(18px);
+    transition: transform 0.6s, opacity 0.6s ease;
+}
+
+.circle_btn .fa-angle-right{
+    opacity: 1;
+    transition: transform 0.6s, opacity 0.6s ease;
+}
+.circle_btn:hover .icon .fa-angle-right{   
+    opacity: 0;
+}
+
+.circle_btn p{
+    font-family: "Rubik"; font-size: 14px; letter-spacing: -0.5px; font-weight: 500; 
+    position: absolute;
+    left: 40px;
+    z-index: 20;
+    color: #111;
+    transition: 0.6s;
+    
+}
+.circle_btn:hover p{
+    color: #f2f2f2;
+}
+
