--- a/css/index.css
+++ b/css/index.css
@@ -201,10 +201,11 @@ header {
 .section_new {
   padding: 160px 0;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   background: #fff;
+  box-sizing: border-box;
+  gap: 30px;
 }
 
 .section_new .contents {
@@ -258,6 +259,7 @@ header {
   border-radius: 12px;
 }
 
+
 .swiperA .swiper-slide-prev,
 .swiperA .swiper-slide-next {
   height: 136px !important;
@@ -303,16 +305,19 @@ header {
 .mySwiperB .swiper-slide {
   opacity: 0;
   transition-property: opacity;
+  pointer-events: none;
 }
 
 .mySwiperB .swiper-slide-active,
 .mySwiperB .swiper-slide-duplicate-active {
   opacity: 1 !important;
+  pointer-events: auto;
 }
 
 .mySwiperB .swiper-slide-prev,
 .mySwiperB .swiper-slide-next {
   opacity: 0;
+  pointer-events: none;
 }
 
 
