--- a/css/index.css
+++ b/css/index.css
@@ -412,6 +412,8 @@ header {
 .section_series .contents .card_list{ width: 100%; display: flex; flex-wrap: wrap; flex-direction: column;}
 .section_series .contents .card_list .card{ display: flex; flex-wrap: wrap; justify-content: space-between; padding: 72px 56px; position: relative; align-items: center;}
 
+.section_series .contents .card_list .card:hover{ background: rgba(17, 17, 17,0.7); transition: 0.6s;}
+
 .section_series .contents .card_list .card:first-child{border-top: 3px solid #f2f2f2; border-bottom: 1.5px solid #f2f2f2;}
 .section_series .contents .card_list .card:nth-child(2){border-bottom: 1.5px solid #f2f2f2;}
 .section_series .contents .card_list .card:last-child{ border-bottom: 3px solid #f2f2f2;}
@@ -460,12 +462,15 @@ background: url(../images/batman_card.jpg);
 background: url(../images/starwars_card.jpg);
 }
 
+.section_series .plus_btn:hover{ color: #f2f2f2;}
+.section_series .plus_btn:hover:after { background: #f2f2f2; }
 
 .point_cursor{
-  width: 600px;
-  height: 600px;
+  width: 1000px;
+  height: 1000px;
   border-radius: 1000px;
-  background: #e3000b;
+  background: #E3000B;
+  background: radial-gradient(circle,rgba(227, 0, 11, 1) 0%, rgba(255, 255, 255, 0) 100%);
   position: absolute; /* absolute → fixed */
   top: 50%;
   left: 50%;
@@ -475,6 +480,57 @@ background: url(../images/starwars_card.jpg);
   pointer-events: none; /* 이것도 추가 */
   opacity: 0; /* 초기에는 숨김 */
 }
+
+
+.section_comingsoon{
+  width: 100%; display: flex; flex-wrap: wrap; flex-direction: column; padding: 160px 0; box-sizing: border-box; justify-content: space-between; text-align: center;
+  background: #2A27E8;
+  background: linear-gradient(180deg,rgba(42, 39, 232, 1) 69%, rgba(17, 17, 17, 1) 100%);
+  position: relative;
+  overflow: hidden;
+}
+
+.section_comingsoon p:nth-child(3){ position: absolute;top: 50%; left: 50%; 
+  transform: translate(-50%, -50%); font-size: 400px; font-family: "Rubik", sans-serif; font-weight: 700; line-height: 80%; letter-spacing: 1px; 
+  color: #f2f2f2;-webkit-text-stroke-width: 30px; -webkit-text-stroke-color: #f2f2f2;
+  filter: drop-shadow(rgba(17, 17, 17, 0.8) 0px -140px 4px);  
+  z-index: 1;
+}
+
+.section_comingsoon .contents{ width: 100%; display: flex; flex-direction: column; gap: 60px; align-items: center;}
+.section_comingsoon .contents .swiper{width: 100%;}
+.swiper-wrapper {
+  transition-timing-function: linear;
+}
+
+.section_comingsoon .contents .mySwiper {
+  height: calc(100vh - 120px);
+  margin: 60px;
+}
+
+
+.section_comingsoon .contents .swiper-slide {
+  width: 400px;
+  height: 400px;
+  overflow: hidden;
+  background-position: top;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+}
+
+.section_comingsoon .contents .swiper-wrapper {
+  width: 100%; display: flex;
+  position: relative;
+  transition-timing-function: linear !important;
+
+}
+.swiper-container .swiper-slide {width: auto; padding: 10px;}
+
+
 /* .dark-mask {
   position: absolute;
   top: 0; left: 0; width: 100%; height: 100%;
