--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,11 @@ text-align: center;
 margin-bottom: 60px;
 }
 
-
-
+.section_title_wrap_medium{
+    width: 100%; display: flex; flex-direction: column; gap: 30px; color: #f2f2f2;
+}
+.section_title_wrap_medium p{line-height: 90%;}
+.section_title_wrap_medium .content_article_xlarge{ font-weight: 400;}
 
 
 /* plus_btn */
