--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ margin-bottom: 60px;
     border-radius: 100px;
     transition: .3s;
     background-color: #f2f2f2;
+    cursor: pointer;
 }
 .round_btn:hover{
  background: #E3000B;
