--- a/css/style.css
+++ b/css/style.css
@@ -112,15 +112,15 @@ margin-bottom: 60px;
 .round_btn{
    width: fit-content;
     padding: 20px 80px;
-    border: 3px solid #E3000B;
-    color: #E3000B;
+    border: 3px solid #111;
+    color: #111;
     border-radius: 100px;
     transition: .3s;
     background-color: #f2f2f2;
     cursor: pointer;
 }
 .round_btn:hover{
- background: #E3000B;
+ background: #111;
  color: #fff;
 }
 .round_btn p{
