--- a/css/reset.css
+++ b/css/reset.css
@@ -14,6 +14,7 @@ img {
   max-width: 100%;
   border: none;
 }
+button{border: none;}
 body {
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
     "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
