--- a/css/index.css
+++ b/css/index.css
@@ -654,13 +654,16 @@ background: linear-gradient(180deg,rgba(17, 17, 17, 1) 0%, rgba(17, 17, 17, 1) 2
   background-size: calc(100% / 10) calc(100% / 7);
   padding: 160px 0 100px 0 ;
   box-sizing: border-box  ;
+  z-index: 2;
 }
-.section_news .section_title{ padding-left:160px ; color: rgba(242, 242, 242, 1); -webkit-text-stroke-width: 3px; -webkit-text-stroke-color: #fff;}
+.section_news .section_title_wrap{ width: 100%; padding-left:160px ; box-sizing: border-box; align-items: start;}
+.section_news .section_title{  color: rgba(242, 242, 242, 1); -webkit-text-stroke-width: 3px; -webkit-text-stroke-color: #fff;}
+.section_news .section_article{  color: rgba(242, 242, 242, 1);}
 
 .section_news .slider{
   position:relative;
   width:100%;
-  height:800px;
+  height: 700px;
   overflow: hidden;
 
 }
@@ -675,6 +678,7 @@ background: linear-gradient(180deg,rgba(17, 17, 17, 1) 0%, rgba(17, 17, 17, 1) 2
 }
 .section_news .card{
   transition: opacity 0.3s ease;
+  display: inline-block;
 }
 .section_news .card.hidden{
   opacity: 0;
@@ -691,31 +695,112 @@ background: linear-gradient(180deg,rgba(17, 17, 17, 1) 0%, rgba(17, 17, 17, 1) 2
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0,0,0,0.3);
   border: 6px #f2f2f2 solid;
+  display: flex;
+  align-items: end;
+  padding: 10px;
+  box-sizing: border-box;
+  transition: .3s;
+  z-index: 5;
 }
-.section_news img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  user-select:none;
-  pointer-events:none;
-}
+.section_news .slide:hover{border: 6px #E3000B solid;}
 
-/* footer */
-footer{
+.section_news .slide .text_wrap{ display: flex; flex-direction: column; gap: 4px;}
+.section_news .slide .text_wrap .content_article_small{ color: #F2F2F2; background: #111; width: fit-content; line-height: 150%; padding: 0 10px; transition: .3s;}
+.section_news .slide:hover .text_wrap .content_article_small{ color: #F2F2F2; background: #E3000B;}
+.section_news .slide .text_wrap .content_article_large{ font-weight: 800; transition: .3s; }
+.section_news .slide:hover .text_wrap .content_article_large{ color: #E3000B; }
+
+.section_news .card:first-child .slide{
+ background: url("../images/news_card01.jpg") 50% 50% /cover no-repeat;}
+.section_news .card:nth-child(2) .slide{
+ background: url("../images/news_card02.jpg") 50% 50% /cover no-repeat;}
+.section_news .card:nth-child(3) .slide{
+ background: url("../images/news_card03.jpg") 50% 50% /cover no-repeat;}
+.section_news .card:nth-child(4) .slide{
+ background: url("../images/news_card04.jpg") 50% 50% /cover no-repeat;}
+.section_news .card:nth-child(5) .slide{
+ background: url("../images/news_card05.jpg") 50% 50% /cover no-repeat;}
+.section_news .card:last-child .slide{
+  align-items: start; padding: 18px; justify-content: space-between; flex-direction: column;
+ background: url("../images/news_card06.jpg") 50% 50% /cover no-repeat;}
+  
+ .footer_thum{
+   position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    bottom: -500px;
+    width: 615px;
+    height: 709px;
+    background: url("../images/footer_thum.png") no-repeat 50% 50% /cover;
+  }
+ 
+ /* footer */
+ footer{
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: column;
+   width: 100%;
+   background: #FAD409 ;
+   position: relative;
+   padding: 72px 56px 40px 56px;
+   box-sizing: border-box;
+   gap: 100px;
+   
+  }
+
+.footer_gnb_wrap{
   width: 100%;
-  height: 900px;
-  background: #FAD409;
-  position: relative;
-  z-index: -1;
+  display: flex; flex-wrap: wrap;justify-content: space-between;
+}
+.footer_gnb{
+  display: flex; flex-wrap: wrap; gap: 48px;
 }
 
-.footer_thum{
- position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-  bottom: -422px;
-  z-index: 1000;
-  width: 615px;
-  height: 709px;
-  background: url("../images/footer_thum.png") no-repeat 50% 50% /cover;
+.footer_brand_wrap{
+  display: flex; flex-direction: column; gap: 16px; text-align: center; 
 }
+
+.sns_wrap{ display: flex; flex-wrap: wrap; gap: 32px; align-items: end;}
+
+#location_btn{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 8px 16px;
+  justify-content: space-between;
+  color: #F2F2F2;
+  background: #2A27E8;
+  border-radius: 26px;
+}
+#location_btn p{
+ font-size: 18px;
+ font-weight: 500;
+ letter-spacing: -0.5px;
+ line-height: 130%;
+}
+#location_btn .fa-location-dot{width: 24px; height: 24px; line-height: 24px; color: #F2F2F2;}
+
+.footer_gnb ul{ display: flex; flex-direction: column; gap: 16px;}
+.footer_gnb ul .content_article_medium{ font-weight: 800;}
+
+.right_footer_gnb{ display: flex; flex-wrap: wrap; gap: 48px;}
+.right_footer_gnb ul{ display: flex; flex-wrap: wrap; flex-direction: column; gap: 16px;}
+.right_footer_gnb ul .content_article_medium{ font-weight: 800;}
+
+.footer_btm{width: 100%; display: flex; flex-direction: column; gap: 56px;}
+.footer_connect_wrap{width: 100%; display: flex; flex-wrap: wrap; justify-content: space-between;}
+.footer_email_form{display: flex; flex-direction: column; gap: 10px;position: relative;}
+.footer_email_form label{padding:0 16px; font-size: 20px; font-weight: 700;}
+.user_email{ width: 300px; height: 58px; background: #f2f2f2; border-radius: 58px; border: 3px #111 solid; padding: 0 16px; box-sizing: border-box; font-size: 16px;}
+.user_email:focus {
+ border: 3px #E3000B solid;
+  outline: none;
+}
+.footer_email_form button{ position: absolute; bottom: 0; right: 0; width: 58px; height: 58px; border-radius: 58px; background: #111;}
+.footer_email_form .fa-chevron-right{ color: #F2F2F2;}
+.footer_email_form button:hover{ background: #E3000B;}
+
+.footer_legal_wrap{width: 100%; display: flex; flex-direction: column; gap: 10px;}
+.footer_policy_list{width: 100%;}
+.footer_policy_list ul{display: flex; flex-wrap: wrap; gap: 24px;}
+.footer_policy_list ul li a{display: inline-block; font-size: 16px; font-weight: 400; }
+.footer_legal_wrap p{ width: 100%;  word-break:keep-all;font-size: 16px; font-weight: 300;}
